      * it is computed and returned during `MetadataParser.fetch_url`
      * `MetadataParser.parse(` optionally accepts it, and will stash
        it into ParsedResult
      * `ParsedResult` 
        * ResponseHistory is not stashed in the metadata stash, but a new namespace
        * `.response_history` will either be `ResponseHistory` or None
    * improving docstrings
    * style cleanup

0.10.5
    packaging fixes
    migrated 'types.txt' out of distribution; it remains in github source
    updated some log lines with the url
    introduced some new log lines
    added `METADATA_PARSER__DISABLE_TLDEXTRACT` env
    merged, but reverted PR#34 which addresses Issue#32


0.10.4
    * black via pre-commit
    * upgraded black; 20.8b1
    * integrated with pre-commit
    * github actions and tox
    * several test files were not in git!

0.10.3
    updated docs on bad data
    black formatting
    added pyproject.toml
    moved BeautifulSoup generation into it's own method, so anyone can subclass to customize
        :fixes: https://github.com/jvanasco/metadata_parser/issues/25
    some internal variable changes thanks to flake8

0.10.2
    added some docs on encoding

0.10.1
    clarifying some inline docs
    BREAKING CHANGE: `fetch_url` now returns a tuple of `(html, encoding)
    now tracking in ParsedResult: encoding
        ParsedResult.metadata['_internal']['encoding'] = resp.encoding.lower() if resp.encoding else None
    `.parse` now accepts `html_encoding`
    refactored url fetching to use context managers
    refactored url fetching to only insert our hooks when needed
    adjusted test harness to close socket connections

0.10.0
    better Python3 support by using the six library

0.9.23
    added tests for url entities
    better grabbing of the charset
    better grabbing of some edge cases

0.9.22
    removed internal calls to the deprecated `get_metadata`, replacing them with `get_metadatas`.